# visual-fashion-detector

./: .gitignore  01_environment_setup.ipynb  02_dataset_loading.ipynb  03_image_preprocessing.ipynb  04_grounding_dino_experiments.ipynb  05_yolo_experiments.ipynb  06_florence_experiments.ipynb  07_clipseg_experiments.ipynb  08_fashion_clip_experiments.ipynb  09_vision_llm_experiments.ipynb  10_hybrid_pipeline_experiments.ipynb  11_comparative_evaluation.ipynb  12_final_recommendations.ipynb  13_classification_first_pipeline.ipynb  14_sam_detection_experiments.ipynb  15_sam_segmenter.ipynb  16_fast_fashion_pipeline.ipynb  17_fast_box_pipeline.ipynb  README.md  detections_v2.json  generate_notebooks.py  pyproject.toml  pyproject_sam3.toml
config/: config.yaml
docs/: fast_pipeline_architecture.md
fashion_detector/: __init__.py  box_pipeline.py  config.py  evaluation.py  fast_pipeline.py  logging.py  pipeline.py  utils.py
fashion_detector/models/: __init__.py  base.py  clipseg.py  fashion_clip.py  florence2.py  grounding_dino.py  sam.py  sam3_segmenter.py  vision_llm.py  yolo.py
sam3_venv/: pyproject.toml
