[project]
name = "fashion-detector-sam3"
version = "0.1.0"
description = "A research framework for fashion item detection, localization, and evaluation supporting SAM 2 and SAM 3."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "torch",
    "torchvision",
    "ultralytics>=8.1.0",
    "litellm>=1.20.0",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "scikit-learn>=1.3.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=0.19.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "ipywidgets>=8.1.8",
    "transformers @ git+https://github.com/huggingface/transformers.git",

]
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["fashion_detector*"]